static/css/style.css
html {
    background-color: #212529 !important;
}

body {
    background-color: #212529 !important;
    color: #F8F9FA;
}

.nav-item.dropdown,
.dropdown-item:hover {
    cursor: pointer;
}

.dropdown-item:hover {
    background-color: rgba(0, 0, 0, 0.1);
}

.fixtureItem,
.cueItem,
.groupItem,
.presetItem {
    width: 100%;
    background-color: #228BE6;
    color: #F8F9FA;
    border-radius: 5px;
    padding-top: 0.95rem;
    padding-bottom: 0.01rem;
    margin-bottom: 0rem;
    text-align: center;
    height: 100%;
}

.fixtureItem {
    font-size: 80%;
}

.presetViewItem {
    font-size: 125%;
}

.fixtureValue {
    font-size: 1.5rem;
}

.fixtureItem:hover {
    background-color: #1971c2;
    cursor: pointer;
}

.cueItem {
    background-color: #40C057;
}

.cueItem:hover {
    cursor: pointer;
    background-color: #2f9e44;
}

.groupItem {
    background-color: #f59f00;
}

.groupItem:hover {
    cursor: pointer;
    background-color: #f08c00;
}

.presetItem {
    background-color: #cc5de8;
}

.presetItem:hover {
    cursor: pointer;
    background-color: #ae3ec9;
}

#fixturesList,
#cuesList,
#groupsList {
    margin-bottom: 3rem;
}

.tab {
    position: fixed;
    bottom: 0;
    right: 0;
    width: 100%;
    background: #343A40;
    text-align: center;
    font-size: 1.5rem;
    padding-top: 0.5rem;
}

.tabcontent {
    margin-bottom: 5rem;
}

.tabitem:hover {
    cursor: pointer;
    color: #a5d8ff;
}

.tabitem.active {
    color: #74c0fc;
}

.tabtext {
    font-size: 1rem;
    display: block;
    color: #F8F9FA;
}

.topBtns {
    margin-bottom: 1rem;
    margin-top: 1rem;
}

.list-group-item,
.dark,
.bootbox-body,
.modal-title {
    color: #343A40;
}

.btn-success {
    background-color: #40c057;
}

.btn-success:hover {
    background-color: #2f9e44;
}

.btn-primary {
    background-color: #228be6;
}

.btn-primary:hover {
    background-color: #1971c2;
}

.btn-danger {
    background-color: #f03e3e;
}

.btn-danger:hover {
    background-color: #c92a2a;
}

.bg-light {
    background-color: #343A40 !important;
}

.custom-range {
    margin-bottom: 1.5rem;
    margin-top: 1.0rem;
}

.preset-range {
    margin-top: 0rem !important;
}

.topBtns.sticky-top {
    top: 4.5rem;
}

.presetActive {
    background-color: #fa5252;
}

.presetActive:hover {
    cursor: pointer;
    background-color: #fa5252;
}

.cueActive {
    background-color: #f59f00;
}

.cueActive:hover {
    cursor: pointer;
    background-color: #fa5252;
}

.cueCurrent {
    background-color: #099268;
}

.cueCurrent:hover {
    cursor: pointer;
    background-color: #fa5252;
}

.red {
    color: #f03e3e;
}

::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-track {
    background: #f1f3f5;
}

::-webkit-scrollbar-thumb {
    background: #868e96;
}

::-webkit-scrollbar-thumb:hover {
    background: #adb5bd;
}

body::-webkit-scrollbar {
    width: 0em;
}

.showFileItem:hover {
    cursor: pointer;
}

.multiselect-container {
    max-height: 15rem;
    height: 10rem;
    overflow-y: scroll;
}

.multiselect {
    width: 15rem;
}

.btn-full {
    width: 100%;
}

#fixtureProfilesList {
    max-height: 15rem;
    overflow-y: scroll;
}

.fixtureProfileItem:hover {
    cursor: pointer;
}

.custom-range::-webkit-slider-thumb {
    height: 2rem;
    margin-top: -0.75rem;
    border-radius: 0.75rem;
    background-color: #fd7e14;
}

.custom-range::-moz-range-thumb {
    height: 2rem;
    margin-top: -0.75rem;
    border-radius: 0.75rem;
    background-color: #fd7e14;
}

.custom-range::-ms-thumb {
    height: 2rem;
    margin-top: -0.75rem;
    border-radius: 0.75rem;
    background-color: #fd7e14;
}

.custom-range {
    margin-top: 1.5rem;
}

.fixtureChips {
    margin-top: 0.5rem;
    margin-bottom: 1rem;
}

.fixtureChip {
    height: 4.5vw;
    width: 100%;
    border-radius: 0.25rem;
    margin-top: 0.25rem;
}

.fixtureChip:hover {
    cursor: pointer;
}

.bootbox > .modal-dialog > .modal-content > .modal-header {
    display: block;
}

.dropdown-menu {
    z-index: 1021 !important;
}

